--- a/app/templates/public/home.html
+++ b/app/templates/public/home.html
@@ -34,6 +34,7 @@
 	                        <h1 class="hero-title mt-0">Welcome to 2022</h1>
 	                        <p class="hero-paragraph"><strong>User Agent -</strong><br/><small>{{ user_agent }}</small></p>
 	                        <p class="hero-paragraph"><strong>Hostname -</strong><br/><small>{{ hostname }}</small></p>
+                            <p class="hero-paragraph"><strong>Version -</strong><br/><small>{{ version }}</small></p>
 	                        <div class="hero-cta">
 								<div class="lights-toggle">
 									<input id="lights-toggle" type="checkbox" name="lights-toggle" class="switch" checked="checked">
